# mlirml

./: .gitignore  .ocamlformat  README.md  dune-project  mlirml.opam  ocaml-mlir-bindings.opam
lib/capi/: dune  mlir.ml
lib/capi/generation/: dune  struct_generator.ml  stub_generator.ml
lib/capi/mlir/: dune  stubs.ml
lib/capi/mlir/stubs/: dune  ir.ml  support.ml  types.ml
lib/capi/mlir/stubs/structs/: dune  structs.ml
src/: affine_map.ml  affine_map.mli  arith.ml  arith.mli  builtin_attributes.ml  builtin_attributes.mli  builtin_types.ml  builtin_types.mli  core.ml  core.mli  dune  execution_engine.ml  execution_engine.mli  func.ml  func.mli  ir.ml  ir.mli  linalg.ml  linalg.mli  main.ml  mlir.ml  mlir.mli  pass.ml  rewrite.ml  sparse_tensor.ml  sparse_tensor.mli  support.ml  support.mli  tensor.ml  tensor.mli  utils.ml
src/bindgen/: bindgen.ml  dune
src/clang/: clang.ml  clang.mli  dune  function_bindings.ml  type_bindings.ml
src/mlir/: dune  mlir.ml
src/tools/bindgen/: bindgen.ml
src/tools/clang/: clang.ml  clang.mli  dune  function_bindings.ml  type_bindings.ml
test/: dune  test_mlirml.ml
