(rule
 (targets type_bindings.ml function_bindings.ml)
 (deps
  (:bindgen ./tools/bindgen/bindgen.exe)
  (:files
   (glob_files /usr/include/mlir-c/*.h)
   (glob_files /usr/include/mlir-c/Target/*.h)
   (glob_files /usr/include/mlir-c/Dialect/*.h)
   (glob_files /usr/include/mlir-c/Dialect/Transform/*.h)))
 (action
  (run %{bindgen} -exclude-header-prefix "mlir/" %{files})))

(library
 (name mlir)
 (public_name mlirml)
 (libraries ctypes ctypes.stubs ctypes.foreign)
 (ctypes
  (external_library_name mlir-c)
  (build_flags_resolver
   (vendored
    (c_flags :standard -L/usr/include)
    (c_library_flags
     :standard
     -fuse-ld=lld
     -L/usr/lib
     -lstdc++
     -lLLVM
     -lLLVM-19
     -lLLVMSupport
     -lLLVMTableGen
     -lMLIR
     -lMLIRAffineAnalysis
     -lMLIRAffineDialect
     -lMLIRAffineToStandard
     -lMLIRAffineTransformOps
     -lMLIRAffineTransforms
     -lMLIRAffineUtils
     -lMLIRAMDGPUDialect
     -lMLIRAMDGPUToROCDL
     -lMLIRAMDGPUTransforms
     -lMLIRAMDGPUUtils
     -lMLIRAMXDialect
     -lMLIRAMXToLLVMIRTranslation
     -lMLIRAMXTransforms
     -lMLIRAnalysis
     -lMLIRArithAttrToLLVMConversion
     -lMLIRArithDialect
     -lMLIRArithToAMDGPU
     -lMLIRArithToArmSME
     -lMLIRArithToEmitC
     -lMLIRArithToLLVM
     -lMLIRArithToSPIRV
     -lMLIRArithTransforms
     -lMLIRArithUtils
     -lMLIRArithValueBoundsOpInterfaceImpl
     -lMLIRArmNeon2dToIntr
     -lMLIRArmNeonDialect
     -lMLIRArmNeonToLLVMIRTranslation
     -lMLIRArmNeonTransforms
     -lMLIRArmSMEDialect
     -lMLIRArmSMEToLLVM
     -lMLIRArmSMEToLLVMIRTranslation
     -lMLIRArmSMEToSCF
     -lMLIRArmSMETransforms
     -lMLIRArmSVEDialect
     -lMLIRArmSVEToLLVMIRTranslation
     -lMLIRArmSVETransforms
     -lMLIRAsmParser
     -lMLIRAsyncDialect
     -lMLIRAsyncToLLVM
     -lMLIRAsyncTransforms
     -lMLIRBufferizationDialect
     -lMLIRBufferizationPipelines
     -lMLIRBufferizationToMemRef
     -lMLIRBufferizationTransformOps
     -lMLIRBufferizationTransforms
     -lMLIRBuiltinToLLVMIRTranslation
     -lMLIRBytecodeOpInterface
     -lMLIRBytecodeReader
     -lMLIRBytecodeWriter
     -lMLIRCallInterfaces
     -lMLIRCAPIAMDGPU
     -lMLIRCAPIArith
     -lMLIRCAPIAsync
     -lMLIRCAPIControlFlow
     -lMLIRCAPIConversion
     -lMLIRCAPIDebug
     -lMLIRCAPIExecutionEngine
     -lMLIRCAPIFunc
     -lMLIRCAPIGPU
     -lMLIRCAPIInterfaces
     -lMLIRCAPIIR
     -lMLIRCAPIIRDL
     -lMLIRCAPILinalg
     -lMLIRCAPILLVM
     -lMLIRCAPIMath
     -lMLIRCAPIMemRef
     -lMLIRCAPIMLProgram
     -lMLIRCAPINVGPU
     -lMLIRCAPINVVM
     -lMLIRCAPIOpenMP
     -lMLIRCAPIPDL
     -lMLIRCAPIQuant
     -lMLIRCAPIRegisterEverything
     -lMLIRCAPIROCDL
     -lMLIRCAPISCF
     -lMLIRCAPIShape
     -lMLIRCAPISparseTensor
     -lMLIRCAPISPIRV
     -lMLIRCAPITarget
     -lMLIRCAPITensor
     -lMLIRCAPITransformDialect
     -lMLIRCAPITransformDialectTransforms
     -lMLIRCAPITransforms
     -lMLIRCAPIVector
     -lMLIRCastInterfaces
     -lMLIRComplexDialect
     -lMLIRComplexToLibm
     -lMLIRComplexToLLVM
     -lMLIRComplexToSPIRV
     -lMLIRComplexToStandard
     -lMLIRControlFlowDialect
     -lMLIRControlFlowInterfaces
     -lMLIRControlFlowToLLVM
     -lMLIRControlFlowToSCF
     -lMLIRControlFlowToSPIRV
     -lMLIRControlFlowTransforms
     -lMLIRConvertToLLVMInterface
     -lMLIRConvertToLLVMPass
     -lMLIRConvertToSPIRVPass
     -lMLIRCopyOpInterface
     -lMLIRDataLayoutInterfaces
     -lMLIRDebug
     -lMLIRDerivedAttributeOpInterface
     -lMLIRDestinationStyleOpInterface
     -lMLIRDialect
     -lMLIRDialectUtils
     -lMLIRDLTIDialect
     -lMLIREmitCDialect
     -lMLIREmitCTransforms
     -lMLIRExecutionEngine
     -lMLIRExecutionEngineUtils
     -lMLIRFromLLVMIRTranslationRegistration
     -lMLIRFuncAllExtensions
     -lMLIRFuncDialect
     -lMLIRFuncInlinerExtension
     -lMLIRFuncMeshShardingExtensions
     -lMLIRFunctionInterfaces
     -lMLIRFuncToEmitC
     -lMLIRFuncToLLVM
     -lMLIRFuncToSPIRV
     -lMLIRFuncTransformOps
     -lMLIRFuncTransforms
     -lMLIRGPUDialect
     -lMLIRGPUPipelines
     -lMLIRGPUToGPURuntimeTransforms
     -lMLIRGPUToLLVMIRTranslation
     -lMLIRGPUToLLVMSPV
     -lMLIRGPUToNVVMTransforms
     -lMLIRGPUToROCDLTransforms
     -lMLIRGPUToSPIRV
     -lMLIRGPUToVulkanTransforms
     -lMLIRGPUTransformOps
     -lMLIRGPUTransforms
     -lMLIRIndexDialect
     -lMLIRIndexToLLVM
     -lMLIRIndexToSPIRV
     -lMLIRInferIntRangeCommon
     -lMLIRInferIntRangeInterface
     -lMLIRInferTypeOpInterface
     -lMLIRIR
     -lMLIRIRDL
     -lMLIRJitRunner
     -lMLIRLinalgDialect
     -lMLIRLinalgToStandard
     -lMLIRLinalgTransformOps
     -lMLIRLinalgTransforms
     -lMLIRLinalgUtils
     -lMLIRLLVMCommonConversion
     -lMLIRLLVMDialect
     -lMLIRLLVMIRToLLVMTranslation
     -lMLIRLLVMIRToNVVMTranslation
     -lMLIRLLVMIRTransforms
     -lMLIRLLVMToLLVMIRTranslation
     -lMLIRLoopLikeInterface
     -lMLIRMaskableOpInterface
     -lMLIRMaskingOpInterface
     -lMLIRMathDialect
     -lMLIRMathToFuncs
     -lMLIRMathToLibm
     -lMLIRMathToLLVM
     -lMLIRMathToROCDL
     -lMLIRMathToSPIRV
     -lMLIRMathTransforms
     -lMLIRMemorySlotInterfaces
     -lMLIRMemRefDialect
     -lMLIRMemRefToEmitC
     -lMLIRMemRefToLLVM
     -lMLIRMemRefToSPIRV
     -lMLIRMemRefTransformOps
     -lMLIRMemRefTransforms
     -lMLIRMemRefUtils
     -lMLIRMeshDialect
     -lMLIRMeshTransforms
     -lMLIRMLProgramDialect
     -lMLIRMLProgramTransforms
     -lMLIRMPIDialect
     -lMLIRNVGPUDialect
     -lMLIRNVGPUToNVVM
     -lMLIRNVGPUTransformOps
     -lMLIRNVGPUTransforms
     -lMLIRNVGPUUtils
     -lMLIRNVVMDialect
     -lMLIRNVVMTarget
     -lMLIRNVVMToLLVM
     -lMLIRNVVMToLLVMIRTranslation
     -lMLIRObservers
     -lMLIROpenACCDialect
     -lMLIROpenACCMPCommon
     -lMLIROpenACCToLLVMIRTranslation
     -lMLIROpenACCToSCF
     -lMLIROpenACCTransforms
     -lMLIROpenMPDialect
     -lMLIROpenMPToLLVM
     -lMLIROpenMPToLLVMIRTranslation
     -lMLIRParallelCombiningOpInterface
     -lMLIRParser
     -lMLIRPass
     -lMLIRPDLDialect
     -lMLIRPDLInterpDialect
     -lMLIRPDLLAST
     -lMLIRPDLLCodeGen
     -lMLIRPDLLODS
     -lMLIRPDLToPDLInterp
     -lMLIRPluginsLib
     -lMLIRPolynomialDialect
     -lMLIRPresburger
     -lMLIRPtrDialect
     -lMLIRQuantDialect
     -lMLIRQuantUtils
     -lMLIRQuery
     -lMLIRQueryLib
     -lMLIRQueryMatcher
     -lMLIRReconcileUnrealizedCasts
     -lMLIRReduce
     -lMLIRReduceLib
     -lMLIRRewrite
     -lMLIRRewritePDL
     -lMLIRROCDLDialect
     -lMLIRROCDLTarget
     -lMLIRROCDLToLLVMIRTranslation
     -lMLIRRuntimeVerifiableOpInterface
     -lMLIRSCFDialect
     -lMLIRSCFToControlFlow
     -lMLIRSCFToEmitC
     -lMLIRSCFToGPU
     -lMLIRSCFToOpenMP
     -lMLIRSCFToSPIRV
     -lMLIRSCFTransformOps
     -lMLIRSCFTransforms
     -lMLIRSCFUtils
     -lMLIRShapeDialect
     -lMLIRShapedOpInterfaces
     -lMLIRShapeOpsTransforms
     -lMLIRShapeToStandard
     -lMLIRShardingInterface
     -lMLIRSideEffectInterfaces
     -lMLIRSparseTensorDialect
     -lMLIRSparseTensorPipelines
     -lMLIRSparseTensorRuntime
     -lMLIRSparseTensorTransformOps
     -lMLIRSparseTensorTransforms
     -lMLIRSparseTensorUtils
     -lMLIRSPIRVBinaryUtils
     -lMLIRSPIRVConversion
     -lMLIRSPIRVDeserialization
     -lMLIRSPIRVDialect
     -lMLIRSPIRVModuleCombiner
     -lMLIRSPIRVSerialization
     -lMLIRSPIRVTarget
     -lMLIRSPIRVToLLVM
     -lMLIRSPIRVToLLVMIRTranslation
     -lMLIRSPIRVTransforms
     -lMLIRSPIRVTranslateRegistration
     -lMLIRSPIRVUtils
     -lMLIRSubsetOpInterface
     -lMLIRSupport
     -lMLIRTableGen
     -lMLIRTargetCpp
     -lMLIRTargetLLVM
     -lMLIRTargetLLVMIRExport
     -lMLIRTargetLLVMIRImport
     -lMLIRTblgenLib
     -lMLIRTensorDialect
     -lMLIRTensorInferTypeOpInterfaceImpl
     -lMLIRTensorTilingInterfaceImpl
     -lMLIRTensorToLinalg
     -lMLIRTensorToSPIRV
     -lMLIRTensorTransformOps
     -lMLIRTensorTransforms
     -lMLIRTensorUtils
     -lMLIRTilingInterface
     -lMLIRToLLVMIRTranslationRegistration
     -lMLIRTosaDialect
     -lMLIRTosaShardingInterfaceImpl
     -lMLIRTosaToArith
     -lMLIRTosaToLinalg
     -lMLIRTosaToMLProgram
     -lMLIRTosaToSCF
     -lMLIRTosaToTensor
     -lMLIRTosaTransforms
     -lMLIRTransformDebugExtension
     -lMLIRTransformDialect
     -lMLIRTransformDialectInterfaces
     -lMLIRTransformDialectIRDLExtension
     -lMLIRTransformDialectTransforms
     -lMLIRTransformDialectUtils
     -lMLIRTransformLoopExtension
     -lMLIRTransformPDLExtension
     -lMLIRTransforms
     -lMLIRTransformUtils
     -lMLIRTranslateLib
     -lMLIRUBDialect
     -lMLIRUBToLLVM
     -lMLIRUBToSPIRV
     -lMLIRValueBoundsOpInterface
     -lMLIRVCIXDialect
     -lMLIRVCIXToLLVMIRTranslation
     -lMLIRVectorDialect
     -lMLIRVectorInterfaces
     -lMLIRVectorToArmSME
     -lMLIRVectorToGPU
     -lMLIRVectorToLLVM
     -lMLIRVectorToLLVMPass
     -lMLIRVectorToSCF
     -lMLIRVectorToSPIRV
     -lMLIRVectorTransformOps
     -lMLIRVectorTransforms
     -lMLIRVectorUtils
     -lMLIRViewLikeInterface
     -lMLIRX86VectorDialect
     -lMLIRX86VectorToLLVMIRTranslation
     -lMLIRX86VectorTransforms
     -lMLIRXeGPUDialect
     -lMLIRXeGPUTransforms)))
  (headers
   (include
    "llvm-c/Core.h"
    "llvm-c/Support.h"
    "llvm-c/Types.h"
    "mlir-c/AffineExpr.h"
    "mlir-c/AffineMap.h"
    "mlir-c/BuiltinAttributes.h"
    "mlir-c/BuiltinTypes.h"
    "mlir-c/Conversion.h"
    "mlir-c/Debug.h"
    "mlir-c/Diagnostics.h"
    "mlir-c/ExecutionEngine.h"
    "mlir-c/IntegerSet.h"
    "mlir-c/Interfaces.h"
    "mlir-c/IR.h"
    "mlir-c/Pass.h"
    "mlir-c/RegisterEverything.h"
    "mlir-c/Rewrite.h"
    "mlir-c/Support.h"
    "mlir-c/Transforms.h"
    "mlir-c/Dialect/AMDGPU.h"
    "mlir-c/Dialect/Arith.h"
    "mlir-c/Dialect/Async.h"
    "mlir-c/Dialect/ControlFlow.h"
    "mlir-c/Dialect/Func.h"
    "mlir-c/Dialect/GPU.h"
    "mlir-c/Dialect/IRDL.h"
    "mlir-c/Dialect/Linalg.h"
    "mlir-c/Dialect/LLVM.h"
    "mlir-c/Dialect/Math.h"
    "mlir-c/Dialect/MemRef.h"
    "mlir-c/Dialect/MLProgram.h"
    "mlir-c/Dialect/NVGPU.h"
    "mlir-c/Dialect/NVVM.h"
    "mlir-c/Dialect/OpenMP.h"
    "mlir-c/Dialect/PDL.h"
    "mlir-c/Dialect/Quant.h"
    "mlir-c/Dialect/ROCDL.h"
    "mlir-c/Dialect/SCF.h"
    "mlir-c/Dialect/Shape.h"
    "mlir-c/Dialect/SparseTensor.h"
    "mlir-c/Dialect/SPIRV.h"
    "mlir-c/Dialect/Tensor.h"
    "mlir-c/Dialect/Transform.h"
    "mlir-c/Dialect/Vector.h"
    "mlir-c/Dialect/Transform/Interpreter.h"
    "mlir-c/Target/LLVMIR.h"))
  (type_description
   (instance Types)
   (functor Type_bindings))
  (function_description
   (instance Functions)
   (functor Function_bindings))
  (generated_types Types_generated)
  (generated_entry_point Bindings)))
