(library
 (name clang)
 (libraries ctypes ctypes.stubs ctypes.foreign)
 (ctypes
  (external_library_name libclang)
  (build_flags_resolver
   (vendored
    (c_flags :standard -lclang)
    (c_library_flags :standard -lclang)))
  (headers
   (include "clang-c/Index.h"))
  (type_description
   (instance Types)
   (functor Type_bindings))
  (function_description
   (instance Functions)
   (functor Function_bindings))
  (generated_types Types_generated)
  (generated_entry_point Bindings)))
